data/derived/comb/progs/unify/prog0199.ml.out
Characters 121-123:
  | (h1,h2) -> ((h1+h2)/10 :: [], (h1+h2) mod 10 :: [])
                 ^^
Error: This expression has type 'a list
       but an expression was expected of type int
